2010-09-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/getpwent.cc (mk_pw_map): Use octave_scalar_map
	instead of Octave_map.
	* DLD-FUNCTIONS/getgrent.cc (mk_gr_map): Likewise.
	* DLD-FUNCTIONS/getrusage.cc (Fgetrusage): Likewise.

2010-09-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/time.cc (intfield, stringfield): New functions.
	(mk_tm_map, extract_tm): Arg is now octave_scalar_map instead of
	Octave_map.
	(extract_tm): Use local intfield and setfield functions.
	(Fmktime, Fstrftime): Use octave_scalar_map instead of Octave_map.

2010-09-28  John W. Eaton  <jwe@octave.org>

	* Cell.h, Cell.cc (Cell::Cell (const std::list<std::string>&)):
	New constructor.

2010-09-28  John P. Swensen  <jpswensen@gmail.com>

	* DLD-FUNCTIONS/__magick_read__.cc (maybe_initialize_magick):
	Warn on initialization of *Magick if QuantumDepth is less than 32.

2010-09-28  John P. Swensen  <jpswensen@gmail.com>

	* DLD-FUNCTIONS/__magick_read__.cc (F__magick_format_list__):
	New function. 

2010-09-28  John P. Swensen  <jpswensen@gmail.com>

	* DLD-FUNCTIONS/__magick_read__.cc (encode_uint_image)
	(encode_bool_image): Ensure bit depth encoding is correct for
	logical, uint8, and uint16 images.

2010-09-28  Jaroslav Hajek  <highegg@gmail.com>

	* xpow.cc (xpow (double, const Matrix&)): Ensure real result for
	positive base.
	(xpow (double, const Matrix&)): Likewise.

2010-09-28  Jaroslav Hajek  <highegg@gmail.com>

	* error.cc (interpreter_try): New function.
	* error.h: Declare it.
	* ov-fcn-handle.cc (octave_fcn_binder::maybe_binder): Use it here.
	* variables.cc (safe_symbol_lookup): Also here.

2010-09-27  John W. Eaton  <jwe@octave.org>

	* gl-render.cc (opengl_renderer::draw_axes): Reverse order in
	which child objects are processed.

2010-09-26  Rik <octave@nomad.inbox5.com>

	* load-path.cc: Use single quotes for regex when possible.
	* DLD-FUNCTIONS/regexp.cc (regexp): Update docstring to highlight
	differences between POSIX and PCRE regex.
